@@ -23,8 +23,7 @@
                                     :password :env/clojars_password
                                     :sign-releases false}]]
 
-  :jvm-opts ~(cond-> '["-Dclojure.main.report=stderr"]
-               (not jdk8?) (conj "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED"))
+  :jvm-opts ["-Dclojure.main.report=stderr"]
 
   :source-paths ["src" "src-jdk8" "src-newer-jdks"]
   :test-paths ~(cond-> ["test"]
@@ -34,10 +33,7 @@
 
   :javac-options ["-Xlint:unchecked"]
 
-
-  :profiles {
-             ;; Clojure versions matrix
-             :provided {:dependencies [[org.clojure/clojure "1.11.1"]
+  :profiles {:provided {:dependencies [[org.clojure/clojure "1.11.1"] ;; Clojure versions matrix
                                        [org.clojure/clojure "1.11.1" :classifier "sources"]
                                        [org.clojure/clojurescript "1.11.4"]]
                         :test-paths ["test-cljs"]}
@@ -54,22 +50,30 @@
                       :dependencies [[org.clojure/clojure "1.12.0-master-SNAPSHOT"]
                                      [org.clojure/clojure "1.12.0-master-SNAPSHOT" :classifier "sources"]]}
 
-             :test {:dependencies [[org.clojure/java.classpath "1.0.0"]]
+             :test {:dependencies [[org.clojure/tools.namespace "1.4.4"] ;; for cognitect.test-runner
+                                   [org.clojure/tools.cli "1.0.206"] ;; for cognitect.test-runner
+                                   [org.clojure/java.classpath "1.0.0"]]
                     :resource-paths ["test-resources"
                                      "not-a.jar"
                                      "does-not-exist.jar"]
                     :java-source-paths ["test-java"]
+                    :middleware [~(do
+                                    (defn add-cognitest [{:keys [test-paths] :as project}]
+                                      (assert (seq test-paths))
+                                      (let [cmd (reduce into [["cognitect.test-runner"]
+                                                              (vec
+                                                               (interleave (take (count test-paths)
+                                                                                 (repeat "--dir"))
+                                                                           test-paths))
+                                                              ["--namespace-regex" (pr-str ".*")]])]
+                                        (assoc-in project [:enrich-classpath :main] (clojure.string/join " " cmd))))
+                                    `add-cognitest)]
                     ;; Initialize the cache verbosely, as usual, so that possible issues can be more easily diagnosed:
                     :jvm-opts
-                    ~(cond-> ["-Dorchard.initialize-cache.silent=false"
-                              "-Dorchard.internal.test-suite-running=true"]
-                       (not jdk8?) (conj "--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED"))
-
-                    :source-paths ["test" "src-spec-alpha-2/src/main/clojure"]}
-
-             :enrich-classpath {:plugins [[mx.cider/enrich-classpath "1.17.0"]]
-                                :middleware [cider.enrich-classpath/middleware]
-                                :enrich-classpath {:shorten true}}
+                    ["-Dorchard.initialize-cache.silent=false"
+                     "-Dorchard.internal.test-suite-running=true"]
+                    :test-paths ["test"]
+                    :source-paths ["src-spec-alpha-2/src/main/clojure" "test-runner/src"]}
 
              ;; Development tools
              :dev {:plugins [[cider/cider-nrepl "0.38.1"]
@@ -102,10 +106,8 @@
                                                                  'orchard.java.parser-next-test)
 
                                                            (or (not jdk8?)
-                                                               (not (-> "TEST_PROFILES"
-                                                                        System/getenv
-                                                                        (doto assert)
-                                                                        (.contains "enrich-classpath"))))
+                                                               (not= "true"
+                                                                     (System/getenv "ENRICH_CLASSPATH")))
                                                            (conj 'orchard.java.legacy-parser))}}
 
              :deploy {:source-paths [".circleci/deploy"]}})
